Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p>mmLoader is a stable library for loading PE module bypassing windows PE loader. mmLoader support x86/x64 Windows.</p>
 
 <h2>
-<a id="0x02-how-to-user-mmloader" class="anchor" href="#0x02-how-to-user-mmloader" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>0x02 How to user mmLoader</h2>
+<a id="0x02-how-to-use-mmloader" class="anchor" href="#0x02-how-to-use-mmloader" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>0x02 How to use mmLoader</h2>
 
 <h4>
 <a id="use-mmloader-as-source-code-or-static-library" class="anchor" href="#use-mmloader-as-source-code-or-static-library" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Use mmLoader as source code or static library</h4>
