Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h2>
 <a id="0x01-what-is-mmloader" class="anchor" href="#0x01-what-is-mmloader" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>0x01 What is mmLoader</h2>
 
-<p>mmLoader is a stable library for loading PE module bypassing windows PE loader. mmLoader support x86/x64 Windows.</p>
+<p>mmLoader is a stable library for loading PE module bypassing windows PE loader. mmLoader supports x86/x64 Windows.</p>
 
 <h2>
 <a id="0x02-how-to-use-mmloader" class="anchor" href="#0x02-how-to-use-mmloader" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>0x02 How to use mmLoader</h2>
@@ -30,7 +30,7 @@
 <h4>
 <a id="use-mmloader-as-source-code-or-static-library" class="anchor" href="#use-mmloader-as-source-code-or-static-library" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Use mmLoader as source code or static library</h4>
 
-<p>Include the all the files in src/mmLoader folder into your proejects. Or you can build the source code to static library and add reference to it in your projects.</p>
+<p>Include all the files in src/mmLoader folder into your proejects. Or you can build the source code to static library and add reference to it in your projects.</p>
 
 <p>In these two ways you can use the mmLoader APIs:</p>
 
@@ -68,7 +68,7 @@ VOID __stdcall
 <h4>
 <a id="use-mmloader-as-shell-code" class="anchor" href="#use-mmloader-as-shell-code" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Use mmLoader as shell code</h4>
 
-<p>If you want to hide the code mmLoader, you can choose to use mmLoader as shell code. Just build the project <strong>mmLoader-shellcode-generator</strong> and then run it you will get the single header file of mmLoaderShellCode.h:</p>
+<p>If you want to hide the code of mmLoader, you can choose to use mmLoader as shell code. Just build the project <strong>mmLoader-shellcode-generator</strong> and then run it you will get the single header file of mmLoaderShellCode.h:</p>
 
 <div class="highlight highlight-source-c++"><pre><span class="pl-c">/************************************************************************/</span>
 <span class="pl-c">/* </span>
